--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.13.2",
+    "bootstrap": "^5.3.8",
     "chart.js": "^4.5.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.1",
