--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.3.8",
     "chart.js": "^4.5.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.10",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
